--- a/plugin.xml
+++ b/plugin.xml
@@ -20,7 +20,7 @@
     <config-file target="*-Info.plist" parent="NSCameraUsageDescription">
       <string>$CAMERA_USAGE_DESCRIPTION</string>
     </config-file>
-    <preference name="CAMERA_USAGE_DESCRIPTION" default=" "/>
+    <preference name="CAMERA_USAGE_DESCRIPTION" default="To scan QRCodes"/>
     <resource-file src="src/ios/scannerOverlay.xib"/>
     <resource-file src="src/ios/CDVBarcodeScanner.bundle"/>
     <header-file src="src/ios/zxing-all-in-one.h"/>
